--- a/tasks.sample
+++ b/tasks.sample
@@ -1,3 +1,3 @@
-run $CURRENT_DIR/uscis_case_status.py SRC9999999999 "Document Was Mailed To Me"
-run $CURRENT_DIR/uscis_case_status.py SRC9999999999 "Was Received"
+run $CURRENT_DIR/uscis_case_status.py SRC9999999999 "Document Was Mailed To Me" "July 4, 1970"
+run $CURRENT_DIR/uscis_case_status.py SRC9999999999 "Was Received" "December 31, 2016"
 run $CURRENT_DIR/uscis_processing_time.py TSC "Employment-based adjustment applications" "December 10, 2016"
